--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-taichi0529.github.io
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>io</title>
+</head>
+<body>
+  <p>taichi0529.github.io</p>
+</body>
+</html>
